# iqos-xapp

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  MakefileVar.mk  README.md  go.mod  go.sum  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  docker-CI.yml  docker-image.yml
api/: config.json
cmd/: iqos.go
cmd/iqos-xapp/: iqos-xapp.go
cmd/iqos_xapp/: iqos_xapp.go
configs/: config.json  schema.json  xApp.conf
deploy/helm-chart/iqos-chart/templates/: NOTES.txt  serviceaccount.yaml  statefulset.yaml
deployments/: compose.yaml
deployments/helm-chart/: README.md
deployments/helm-chart/iqos-xapp/: Chart.yaml  values.yaml
deployments/helm-chart/iqos-xapp/config/: config-file.json
deployments/helm-chart/iqos-xapp/descriptors/: schema.json
deployments/helm-chart/iqos-xapp/templates/: appconfig.yaml  deployment.yaml
deploys/helm-chart/: README.MD
deploys/helm-chart/iqos-chart/: Chart.yaml  values.yaml
deploys/helm-chart/iqos-chart/files/certs/: README.md  generate_certs.sh  tls.cacert  tls.crt  tls.key
deploys/helm-chart/iqos-chart/templates/: _helpers.tpl  configmap.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  statefulset.yaml
docker/: Dockerfile
docs/: 28_552_kpm_meas.txt  SM_KPM.md  riab-installation.md
include/: SoftmaxLayer.h  cellstr_sort.h  defer.hpp  e2Info.hpp  elementwiseOperationInPlace.h  find.h  getCategoryNames.h  insertionsort.h  internal_softmax.h  introsort.h  kpmManager.hpp  logger.hpp  postProcessOutputToReturnCategorical.h  predict.h  predictForRNN.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h  runPrediction.h  runPrediction_data.h  runPrediction_initialize.h  runPrediction_internal_types.h  runPrediction_terminate.h  runPrediction_types.h  strcmp.h  strtrim.h
include/kafka/: producer.hpp
libs/: CMakeLists.txt
libs/rnib/: additional_cell_information_pb2.py  cell_pb2.py  cells_pb2.py  e2node_component_config_pb2.py  enb_pb2.py  gnb_pb2.py  nb_identity_pb2.py  nb_types_pb2.py  nodeb_info_pb2.py  ran_function_pb2.py  ran_load_information_pb2.py  x2_setup_failure_response_pb2.py
libs/tabulate/: format.hpp  table_internal.hpp
libs/test/: README.md
pkg/broker/: broker.go  options.go  stream.go
pkg/clientv/: clientv.go  options.go
pkg/config/: config.go  options.go
pkg/manager/: manager.go  options.go
pkg/monitoring/: Monitor.go  monitor.go  options.go
pkg/nib/rnib/: options.go  rnib.go
pkg/nib/uenib/: options.go  uenib.go
pkg/northbound/: rsm.go  types.go
pkg/slicemgr/: manager.go  options.go
pkg/slicing/: manager.go  options.go
pkg/southbound/e2/: controlMessage.go  manager.go  options.go  types.go
pkg/ueclient/: options.go  ueclient.go
pkg/uemgr/: manager.go  options.go
scripts/: cpRicFiles.sh  genKafkaUuid.py  run.sh
src/: SoftmaxLayer.c  cellstr_sort.c  e2Info.cpp  elementwiseOperationInPlace.c  find.c  getCategoryNames.c  insertionsort.c  internal_softmax.c  introsort.c  kpmManager.cpp  logger.cpp  logger.py  main.cpp  main.py  postProcessOutputToReturnCategorical.c  predict.c  predictForRNN.c  rtGetInf.c  rtGetNaN.c  rt_nonfinite.c  runPrediction.c  runPrediction_data.c  runPrediction_initialize.c  runPrediction_terminate.c  strcmp.c  strtrim.c
src/kafka/: producer.cpp
